fixing some cover block wide alignments from backend

--- a/assets/styles/custom-editor-style.scss
+++ b/assets/styles/custom-editor-style.scss
@@ -279,6 +279,12 @@ body.post-type-page .is-sidebar-opened .block-editor-editor-skeleton__content .e
         display: flex;
     }
 
+    /* specific for WordPress 6.5.2 */
+    .editor-styles-wrapper .block-editor-block-list__layout.is-root-container>.wp-block-cover.alignwide:where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+        margin-left: -10% !important;
+        margin-right: -10% !important;
+    }
+
     .post-type-page .editor-styles-wrapper .is-root-container>.wp-block[data-align="wide"] {
         max-width: 1368px;
     }
